--- a/views/blog/detail.ejs
+++ b/views/blog/detail.ejs
@@ -35,8 +35,8 @@
       <div class="row justify-content-center">
           <div class="col-md-9 col-sm-12">
             <div class="d-flex align-items-center">
-                <img src="https://pbs.twimg.com/media/CRySIhXWUAA_2Qy.png" alt="" class="img-fluid img-thumbnail rounded-circle" style="width: 50px; height: 50px; box-shadow: 1px 1px 2px rgb(230, 230, 230)">
-              <p class="ml-4"><strong><%= comment.author %></strong></p>
+                <img src="<%= comment.author.userimage %>" alt="" class="img-fluid img-thumbnail rounded-circle" style="width: 50px; height: 50px; box-shadow: 1px 1px 2px rgb(230, 230, 230)">
+              <p class="ml-4"><strong><%= comment.author.username %></strong></p>
               <span class="offset-8"><%= comment.created_At.toDateString() %></span>
             </div>
           </div>
