--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -5,15 +5,15 @@
     <form action="/blog", method="POST">
       <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" class="form-control" placeholder="Title" id='title' name='blog[title]'>
+        <input type="text" class="form-control" placeholder="Title" id='title' name='title'>
       </div>
       <div class="form-group">
         <label for="image">Image URL</label>
-        <input type="text" class="form-control" placeholder="Title" id='image' name='blog[image]'>
+        <input type="text" class="form-control" placeholder="Title" id='image' name='image'>
       </div>
       <div class="form-group">
         <label for="post">Post</label>
-        <textarea class="form-control" id="post" rows="3" placeholder="Say here" name='blog[post]'></textarea>
+        <textarea class="form-control" id="post" rows="3" placeholder="Say here" name='post'></textarea>
       </div>
       <input type="submit" class="btn btn-success btn-block" value='Add Post'>
     </form>
