image size repair

--- a/views/blog/detail.ejs
+++ b/views/blog/detail.ejs
@@ -10,7 +10,7 @@
           <span> <%= blog.created_At.toDateString() %> </span>
         </div>
         <div class="text-center mt-2">
-          <img src="<%= blog.image %>" alt="#" class="img-fluid img-thumbnail rounded" style="width: 80%; height: 400px; box-shadow: 1px 1px 2px rgb(230, 230, 230)">
+          <img src="<%= blog.image %>" alt="#" class="img-fluid img-thumbnail rounded" style="width: 80%; height: auto; box-shadow: 1px 1px 2px rgb(230, 230, 230)">
         </div>
         <div>
           <div class="row justify-content-center mt-3">
